--- a/mission.html
+++ b/mission.html
@@ -27,32 +27,76 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Generic</h1>
+										<h1>Our Mission</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<div class="tooltip">
+                                        <span class="tooltiptext">art: na hyesok</span><span class="image main">
+                                            <img src="https://i.ibb.co/0KHDzgs/image-2023-07-02-221023959.png" alt="" />
+                                        </span>
+                                        </span>
+                                    </div>
+                                    <h2>Our History</h2>
+                                    <p><span class="image left"><img src="https://i.ibb.co/mXsCXbL/image-2023-07-02-221742301.png" alt="" /></span>The GAC was originally formulated under the name Arts through the Ages in autumn of 2022 by three Northern Virginian freshmen as a response to the utter lack of cultural art history representation in our non-secondary school system. During that time, we held fundraisers and researched the issues we feel are relevant, exposing ourselves to areas of art history that were previously concealed.                                         
+                                        </p>
+                                    <p><span class="image right"><img src="https://i.ibb.co/7J15872/image-2023-07-02-221955185.png" alt="" /></span>                                        After careful consideration, we decided to refashion our structures and ideas starting in early 2023, shifting focus to accessibility of non-Eurocentric art history resources to the general youth in order to reach a wider audience of like-minded people. 
+                                    </p>
+                                    <hr class="major" />
 
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<h2>About our name</h2>
+									<p>Gliese 581 is a system 20.5 light years away from Earth, located in the Libra constellation, the 101st closest star system to our Sun. The name comes from the Gliese Catalogue of Nearby Stars, a 1957 magazine.  Several searches for extraterrestrial life have been conducted; 501 human messages are expected to reach the system in 2029. 
+                                        
+                                        </p>
+									<p>                                        We named our organization after this mysterious system, to honor art itself, framing it as not an Earth-bound, but a universal concept: a language we are all born with and live to share.
+                                    </p>
 
 									<hr class="major" />
+                                    <style>
+                                    .colum {
+                                        float: left;
+                                        width: 32%;
+                                        margin:3px;
+                                      }
+                                    .roow:after {
+                                        content: "";
+                                        display: table;
+                                        clear: both;
+                                      }
+                                      @media screen and (max-width: 650px) {
+  .colum {
+    width: 75%;
+    display: block;
+    margin-left:30px;
+    margin-right:30px;
+  }
+}
 
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+                                    </style>
+                                    <div class="roow">
+                                        <div class="colum"> 
+                                            <div class="col-4"><span class="image fit"><img src="https://i.ibb.co/8DyqP62/image-2023-07-02-223916130.png" alt="" /></span></div>
+                                            <h3>Solidarity in radicalism</h3>
+                                            <p>yaaaas</p>
+                                        </div>
+                                        <div class="colum">
 
-									<hr class="major" />
+                                            <div class="col-4"><span class="image fit"><img src="https://i.ibb.co/420YV00/image-2023-07-02-223852247.png" alt="" /></span></div>
+                                            <h3>Education</h3>
+                                        <p>yaaaas</p>
+                                    </div>
+                                        <div class="colum">
+                                            <div class="col-4"><span class="image fit"><img src="https://i.ibb.co/FbMmD6X/image-2023-07-02-223904495.png" alt="" /></span></div>
 
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+                                        <h3>The future</h3>
+                                        <p>yaaaas</p>
+                                    </div>
+                                      </div>
+                                      
+                                      <hr class="major" />
 
-									<hr class="major" />
+                                    <h2>Where we're going</h2>
+                                    <p></p>
 
-									<h2>Lorem aliquam bibendum</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 
 								</section>
 
