--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/3626f04910.js" crossorigin="anonymous"></script>
-
+		<link rel="shortcut icon" type="image/png" 
+		href="{{ "favicon.ico"  | absolute_url }}">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	
 	</head>
 	<body class="is-preload">
 
