--- a/staff.html
+++ b/staff.html
@@ -5,6 +5,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+    <script src="https://kit.fontawesome.com/3626f04910.js" crossorigin="anonymous"></script>
+		<link rel="shortcut icon" type="image/png" 
+		href="{{ "favicon.ico"  | absolute_url }}">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
         <style>
             /* Three columns side by side */
 .column {
@@ -234,4 +239,27 @@ padding:4px;
 			<script src="assets/js/main.js"></script>
 
 	</body>
+  <footer class="footer-distributed">
+
+    <div class="footer-right">
+
+      <a href="https://www.facebook.com/glieseartcollective/"><i class="fa fa-facebook"></i></a>
+      <a href="https://github.com/glieseartcollective"><i class="fa fa-github"></i></a>
+      <a href="https://instagram.com/gliese.artcollective"><i class="fa fa-instagram"></i></a>
+
+    </div>
+
+    <div class="footer-left">
+
+      <p class="footer-links">
+        <a class="link-1" href="https://gliese.arceus.day">Home</a>
+      </p>
+
+      <p>Gliese Art Collective &copy; 2023</p>
+      <br>
+      <p><a style="color:rgb(109, 109, 109)" href="mailto:gliese.artcollective@gmail.com">gliese.artcollective@gmail.com</a></p>
+    </div>
+
+  </footer>
+
 </html>
