--- a/staff.html
+++ b/staff.html
@@ -150,7 +150,10 @@ padding:4px;
                                           </div>
                                           <div class="column">
                                             <div class="card">
-                                              <img src="img3.jpg" alt="John" style="width:100%">
+                                              <br>
+                                              <img src="                                                images/pic07.jpg
+                                              " class="rounded" style="border:5px solid #edb56b; margin-bottom:20px;">
+  
                                               <div class="container">
                                                 <h2>yaya lan</h2>
                                                 <p class="title">organizer</p>
