--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<div class="posts">
 										<article>
 											<a href="library.html" class="image"><img src="https://i.ibb.co/jZbB9cZ/image-2023-07-02-204816074.png" alt="" /></a>
-											<h2>library</h2>
+											<h2>Library</h2>
 											<p style="margin:10px;">The resting place of our own resources.</p>										<p style="font-size: 90%"><em>art: grapes, ai weiwei</em></p>
 											<ul class="actions">
 												<li><a href="library.html" class="button">See</a></li>
@@ -82,11 +82,11 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="https://i.ibb.co/QJJWGJJ/image-2023-07-02-205226144.png" alt="" /></a>
+											<a href="staff.html" class="image"><img src="https://i.ibb.co/QJJWGJJ/image-2023-07-02-205226144.png" alt="" /></a>
 											<h2>Our staff</h2>
 											<p style="margin:10px;">Who we are as individuals.</p>										<p style="font-size: 90%"><em>art: with wind, ai weiwei</em></p>
 											<ul class="actions">
-												<li><a href="#" class="button">See</a></li>
+												<li><a href="staff.html" class="button">See</a></li>
 											</ul>
 										</article>
 									
