--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
 								</section>
 
 							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
+                            <footer id="footer" style="color: #373b52">
+                                <p class="copyright">&copy; Gliese Art Collective. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+<br><br><br>                            </footer>
+
 
 						</div>
 						<a href="#sidebar" class="toggle">"Toggle"</a>
