--- a/library.html
+++ b/library.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-        <script src="https://kit.fontawesome.com/3626f04910.js" crossorigin="anonymous"></script>
+        		<script src="https://kit.fontawesome.com/3626f04910.js" crossorigin="anonymous"></script>
 		<link rel="shortcut icon" type="image/png" 
 		href="{{ "favicon.ico"  | absolute_url }}">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -119,9 +119,10 @@
                             </section>
 
                         <!-- Footer -->
-                            <footer id="footer">
-                                <p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-                            </footer>
+                        <footer id="footer" style="color: #373b52">
+                            <p class="copyright">&copy; Gliese Art Collective. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+<br><br><br>                            </footer>
+
 
                     </div>
                 </div>
