--- a/staff.html
+++ b/staff.html
@@ -226,7 +226,10 @@ padding:4px;
 
                         <!-- Footer -->
                             <footer id="footer">
-                                <p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+                              <footer id="footer" style="color: #373b52">
+                                <p class="copyright">&copy; Gliese Art Collective. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+<br><br><br>                            </footer>
+
                             </footer>
 
                     </div>
