--- a/mission.html
+++ b/mission.html
@@ -83,6 +83,7 @@
                                                                           <p><span class="image left"><img src="https://i.ibb.co/wctyG8s/image-2023-07-11-175110548.png" alt="" /></span> The Collective's goals are to: <br> <strong>1. </strong> Create educational videos on specific artists <br><strong>2.</strong> Create educational videos on important movements and how art affected them <br> <strong>3. </strong>Distribute knowledge and resources that have been previously inaccessible    <br> <strong>4. </strong> Hold both in-person and online events in order to foster youth community discourse of art and its many facets                 
                                                                               </p>
                                                                               <hr class="major" />
+									                                                                              <hr class="major" />
                                   
                                       <br> <br> <Br>
                                     <div class="roow">
