--- a/mission.html
+++ b/mission.html
@@ -116,7 +116,7 @@
                                         <p>The Collecive views art education as absolutely essential for general youth development, for anyone, going into any field. Art is a lens to see through, and free education of it is the easiest way to get a prescription pair of glasses.</p>
                                     </div>
     <div>  <span class="image fit"><img src="https://i.ibb.co/h20LFcx/image-2023-07-12-102746139.png" alt="" /></span>  <h3>The future</h3>
-                                        <p>The Collective values future-thinking mindsets, envisioning future generations of art through a historical lens. There is no way to create a future without knowing the history of it. </p></div>
+                                        <p>The Collective values future-thinking mindsets, envisioning future generations of art through a historical lens. There is no way to create a future without knowing the history of it. </p>
 </div>
 	    </div>
 					
