--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 									<ul class="icons">
 										<li><a href="https://www.facebook.com/glieseartcollective" class="fa-brands fa-facebook fa-2xl"></a></li>
 										<li><a href="https://www.instagram.com/gliese.artcollective/" class="fa-brands fa-instagram fa-2xl"></a></li>
+										<li><a href="https://glieseart.tumblr.com" class="fa-brands fa-tumblr fa-2xl"></a></li>
 									</ul>
 								</header>
 
@@ -171,6 +172,7 @@
 				<a href="https://www.facebook.com/glieseartcollective/"><i class="fa fa-facebook"></i></a>
 				<a href="https://github.com/glieseartcollective"><i class="fa fa-github"></i></a>
 				<a href="https://instagram.com/gliese.artcollective"><i class="fa fa-instagram"></i></a>
+				<a href="https://glieseart.tumblr.com"><i class="fa fa-tumblr"></i></a>
 
 			</div>
 
