--- a/library.html
+++ b/library.html
@@ -32,7 +32,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Gliese Library 📌</h1>
+										<h1>Gliese Library</h1>
 									</header>
 
 									<span class="image main"><img src="https://i.ibb.co/xJS4tPc/dezoomify-result.jpg" alt="" /></span>
