--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 									</header>
 									<p>If you have any questions, we would love to hear from you!</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="mailto:gliese.artcollective@gmail.com">gliese.artcollective@gmail.com</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto:gliese.artcollective@gmail.com">gliese.artcollective</a></li>
 										<li class="icon solid fa-phone">(703) 215-5587</li>
 									</ul>
 								</section>
