--- a/index.html
+++ b/index.html
@@ -109,16 +109,44 @@
 								</section>
 
 							<!-- Menu -->
+	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+  <script>
+  $( function() {
+    $( "#show-option" ).tooltip({
+      show: {
+        effect: "slideDown",
+        delay: 250
+      }
+    });
+    $( "#hide-option" ).tooltip({
+      hide: {
+        effect: "explode",
+        delay: 250
+      }
+    });
+    $( "#open-event" ).tooltip({
+      show: null,
+      position: {
+        my: "left top",
+        at: "left bottom"
+      },
+      open: function( event, ui ) {
+        ui.tooltip.animate({ top: ui.tooltip.position().top + 10 }, "fast" );
+      }
+    });
+  } );
+  </script>
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
 									<ul style="font-family: Inconsolata">
-										<li><a href="index.html" >Home</a></li>
-										<li><a href="library.html">Library</a></li>
-										<li><a href="staff.html">Staff</a></li>
-												<li><a href="mission.html">Mission</a></li>
-												<li><a href="resources.html">Resources</a></li>
+										<li><a href="index.html" ><a id="show-option" href="http://jqueryui.com/demos/tooltip/#option-show" title="back to the homepage...">Home</a></a></li>
+										<li><a href="library.html"><a href="library.html" ><a id="show-option" href="http://jqueryui.com/demos/tooltip/#option-show" title="see our garden of history">Library</a></a></li>
+										<li><a href="staff.html"><a href="staff.html" ><a id="show-option" href="http://jqueryui.com/demos/tooltip/#option-show" title="learn about the collective!">Staff</a></a></li>
+												<li><a href="mission.html"><a href="mission.html" ><a id="show-option" href="http://jqueryui.com/demos/tooltip/#option-show" title="what we believe in">Mission</a></a></li>
+												<li><a href="resources.html"><a href="resources.html" ><a id="show-option" href="http://jqueryui.com/demos/tooltip/#option-show" title="other places to learn">Resources</a></a></li>
 											</ul>
 										
 											<ul>
