--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
 										<h2>Menu</h2>
 									</header>
 									<ul style="font-family: Inconsolata">
-										<li><a href="index.html" ><a id="show-option" href="http://jqueryui.com/demos/tooltip/#option-show" title="back to the homepage...">Home</a></a></li>
-										<li><a href="library.html"><a href="library.html" ><a id="show-option" href="http://jqueryui.com/demos/tooltip/#option-show" title="see our garden of history">Library</a></a></li>
-										<li><a href="staff.html"><a href="staff.html" ><a id="show-option" href="http://jqueryui.com/demos/tooltip/#option-show" title="learn about the collective!">Staff</a></a></li>
-												<li><a href="mission.html"><a href="mission.html" ><a id="show-option" href="http://jqueryui.com/demos/tooltip/#option-show" title="what we believe in">Mission</a></a></li>
-												<li><a href="resources.html"><a href="resources.html" ><a id="show-option" href="http://jqueryui.com/demos/tooltip/#option-show" title="other places to learn">Resources</a></a></li>
-											</ul>
+										<li><a href="index.html" >Home</a></li>
+										<li><a href="library.html">Library</a></li>
+										<li><a href="staff.html">Staff</a></li>
+												<li><a href="mission.html">Mission</a></li>
+												<li><a href="resources.html">Resources</a></li>
+												</ul>
 										
 											<ul>
 								</nav>
