--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="https://i.ibb.co/SQ34RCm/image-2023-07-02-210433088.png" alt="" /></a>
-											<p>A cool piece of art I found while working on the site. It's <a href="https://artsandculture.google.com/asset/codes-of-conduct-amani-althuwaini/GgGkpM4Czfit-Q"><em>Codes of Conduct</em> by Amani Althuwaini in 2017</a>, about dowry gifting in Kuwait.</p>
+											<a href="#" class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/WGTY_21_M_w?si=qHF_fI1Dqf79LjP6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></a>
+											<p>Check out our introductory video.</p>
 										</article>
 									</div>
 								</section>
