--- a/index.html
+++ b/index.html
@@ -51,7 +51,17 @@
 										<img src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/hubble_lightsaber_image2.jpg?itok=aAg3p3-Y" alt="hubble-sees-the-force-awakening-in-a-newborn-star" />
 									</span>
 								</section>
-
+								<section>
+									<header class="major">
+										<h2>New media</h2>
+									</header>
+										<div class="col-6 col-12-small">
+											<h3>Feature on KYUNGAH HAM</h3>
+											<p>Ham is a Korean artist that creates multimedia installations about war's legacy on workers and protest art on great power divides. She creates art for the purpose of connection with the "forbidden citizens" in North Korea by collaborating with them anonymously on her embroidery pieces.</p>
+										</div>
+										<div class="col-6 col-12-small">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/8im9U3Sd3PQ?si=UFnT9K2k5Ojmq4ht" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>										</div>
+								</section>
 							<!-- Section -->
 								<section>
 									<header class="major">
@@ -159,7 +169,7 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><iframe width="560" height="315" src="https://www.youtube.com/embed/WGTY_21_M_w?si=qHF_fI1Dqf79LjP6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></a>
+											<a href="#" class="image"><iframe src="https://www.youtube.com/embed/WGTY_21_M_w?si=qHF_fI1Dqf79LjP6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></a>
 											<p>Check out our introductory video.</p>
 										</article>
 									</div>
