--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
 									<header class="major">
 										<h2>New media</h2>
 									</header>
-										<div class="col-6 col-12-small">
+										<div class="col-6 col-12-small" style="width: 50%;float: left;
+										padding: 20px;">
 											<h3>Feature on KYUNGAH HAM</h3>
 											<p>Ham is a Korean artist that creates multimedia installations about war's legacy on workers and protest art on great power divides. She creates art for the purpose of connection with the "forbidden citizens" in North Korea by collaborating with them anonymously on her embroidery pieces.</p>
 										</div>
-										<div class="col-6 col-12-small">
+										<div class="col-6 col-12-small" style="width: 50%;float: left;
+										padding: 20px;">
 											<iframe width="560" height="315" src="https://www.youtube.com/embed/8im9U3Sd3PQ?si=UFnT9K2k5Ojmq4ht" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>										</div>
 								</section>
 							<!-- Section -->
