--- a/index.html
+++ b/index.html
@@ -52,17 +52,30 @@
 									</span>
 								</section>
 								<section>
-									<header class="major">
-										<h2>New media</h2>
+									<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+									">
+									<header class="major">   
+										<style>
+											.dog:hover{
+												text-transform: lowercase;
+											text-shadow: 0 0 5px #6c637c;
+											}
+											.cat:hover{
+											text-shadow: 0 0 3px #726982;
+											}
+
+										</style>
+										<h2 class="dog">FEATURED</h2>
 									</header>
-										<div class="col-6 col-12-small" style="width: 50%;float: left;
-										padding: 20px;">
-											<h3>Feature on KYUNGAH HAM</h3>
-											<p>Ham is a Korean artist that creates multimedia installations about war's legacy on workers and protest art on great power divides. She creates art for the purpose of connection with the "forbidden citizens" in North Korea by collaborating with them anonymously on her embroidery pieces.</p>
+										<div class="col-6 col-12-small">
+											<h3 class="dog">Video on <strong>KYUNGAH HAM</strong></h3>
+											<p class="cat">Ham is a Korean artist that creates multimedia installations about war's legacy on workers and protest art on great power divides. She creates art for the purpose of connection with the "forbidden citizens" in North Korea by collaborating with them anonymously on her embroidery pieces.</p>
 										</div>
-										<div class="col-6 col-12-small" style="width: 50%;float: left;
-										padding: 20px;">
-											<iframe width="560" height="315" src="https://www.youtube.com/embed/8im9U3Sd3PQ?si=UFnT9K2k5Ojmq4ht" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>										</div>
+										<div class="col-6 col-12-small">
+											<p align="center"><iframe width="70%" height="250rem" style="border-radius:5px" src="https://www.youtube.com/embed/8im9U3Sd3PQ?si=UFnT9K2k5Ojmq4ht" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>										</div>
+
+										</div>
+<br>
 								</section>
 							<!-- Section -->
 								<section>
