--- a/staff.html
+++ b/staff.html
@@ -115,7 +115,7 @@ padding:4px;
                                               <p class="title">founder + web developer + video prod</p>
                                               <p>hi! i'm a sophomore at langley high school. i draw, code, write, and play violin. i really like the solarpunk genre and am currently reading <a href="https://www.goodreads.com/book/show/60647407-postcolonial-configurations?ac=1&from_search=true&qid=0SMZZGQlOB&rank=1"><em>postcolonial configurations</em> by josen masangkay diaz.</a> </p>
                                               <p>contact me @ <a href="mailto:michaelafrey02@gmail.com">michaelafrey02@gmail.com!</a></p>
-                                              <p><button class="button"><a href="https://miye.arceus.day">website</a></button></p>
+                                              <p><button class="button"><a href="https://micha.arceus.day">website</a></button></p>
                                             </div>
                                           </div>
                                         </div>
@@ -123,12 +123,12 @@ padding:4px;
                                         <div class="column">
                                           <div class="card">
                                             <br>
-                                            <img src="https://media.discordapp.net/attachments/833866530483339306/1125242453033746474/image.png?width=962&height=958" class="rounded" style="border:5px solid #edb56b; margin-bottom:20px;">
+                                            <img src="https://media.discordapp.net/attachments/833866530483339306/1153173694177362000/image.png?width=698&height=1004" class="rounded" style="border:5px solid #edb56b; margin-bottom:20px;">
                                             <div class="container">
                                               <h2>mo gruber</h2>
                                               <p class="title">communications</p>
-                                              <p>bio work in progress!</p>
-                                              <p><a href="mogruberw@gmail.com">mogruberw@gmail.com</a></p>
+                                              <p>Hi, I’m currently a Sophomore attending McLean High School. I’m a cellist. I enjoy listening to classical music; Mario Castelnuovo-Tedesco, Kapustin, and Prokofiev are some of my favorite composers. I also love to read, my favorite books include When We Cease to Understand the World by Benjamín Labatut and Proust was a Neuroscientist by Jonah Lehrer. However, I dislike English class in school almost passionately. I own a cat that I affectionately named Meatball. </p>
+                                              <p><a href="mogruberw@gmail.com">mogruber1@gmail.com</a></p>
                                               <p><button class="button">website</button></p>
                                             </div>
                                           </div>
