--- a/mission.html
+++ b/mission.html
@@ -80,7 +80,7 @@
                                                                           <hr class="major" />
 
                                                                           <h2>Where we're going</h2>
-                                                                          <p><span class="image left"><img src="https://i.ibb.co/wctyG8s/image-2023-07-11-175110548.png" alt="" /></span> The Collective's goals are to: <br> <strong>1. </strong> Create educational videos on specific artists <br><strong>2.</strong> Create educational videos on important movements and how art affected them <br> <strong>3. </strong>Distribute knowledge and resources that have been previously inaccessible    <br> <strong>4. </strong> Hold both in-person and online events on artistic liberation in order to foster youth community discourse of art and its many facets                 
+                                                                          <p><span class="image left"><img src="https://i.ibb.co/wctyG8s/image-2023-07-11-175110548.png" alt="" /></span> The Collective's goals are to: <br> <strong>1. </strong> Consolidate knowledge and encourage dialogue on radical movements and their art <br><strong>2.</strong> Create educational resources to promote the significance of art history <br> <strong>3. </strong>Distribute knowledge and resources that have been previously inaccessible    <br> <strong>4. </strong> Hold both in-person and online events on artistic liberation in order to foster youth community discourse of art in the frame of current events <br> <strong>5. </strong> Decolonize, revolutionize, acknowledge, and grow as a community              
                                                                               </p>
                                                                               <hr class="major" />
 <style>
@@ -108,7 +108,8 @@
     		<div>
 	    		<span class="image fit"><img src="https://i.ibb.co/8DyqP62/image-2023-07-02-223916130.png" alt="" /></span>
                         <h3>Solidarity in radicalism</h3>
-                        <p>The Collective does not just believe that art is a medium for radical action, but that art and radical action are intrinsically connected in their respective histories and usages.</p>
+                        <p>The Collective does not just believe that art is a medium for radical action, but that art and radical action are intrinsically connected in their respective histories and usages. In the modern day of worldwide turmoil, art is used as a simultaneous means of quietness and loudness, making it all the more powerful– radical art can shout passionately in ways that change the world.
+</p>
     		</div>
    		<div>
 		    	<span class="image fit"><img src="https://i.ibb.co/420YV00/image-2023-07-02-223852247.png" alt="" /></span>
