--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 									<div class="content">
 										<header>
 											<p>GLIESE ART COLLECTIVE</p>
-											<h1>A student-led community devoted to promoting accessible education and analysis  of art history
+											<h1>A student-led community devoted to promoting accessible education and analysis of radical art history
 											</h1>
 										</header>
 										<p>We’re a group of high-school students from Northern Virginia who are passionate about little-known aspects of art history — the offshoots of the common narrative.
 										</p><p>
-											Our goal is to provide free, accessible, and original resources to students about the history of cultural art, music, and movements. 
+											Our goal is to provide free, accessible, and original resources to students about the history of cultural and radical art, music, and movements. 
 											
 									</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="mission.html" class="button big">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
