--- a/index.html
+++ b/index.html
@@ -56,9 +56,17 @@
 									">
 									<header class="major">   
 										<style>
+											.dog{
+											transition: 0.2s;
+											}
 											.dog:hover{
 												text-transform: lowercase;
 											text-shadow: 0 0 5px #6c637c;
+
+											}
+											.cat{
+											transition: 0.2s;
+
 											}
 											.cat:hover{
 											text-shadow: 0 0 3px #726982;
