--- a/library.html
+++ b/library.html
@@ -37,8 +37,9 @@
 
 									<span class="image main"><img src="https://i.ibb.co/xJS4tPc/dezoomify-result.jpg" alt="" /></span>
 
+									
 									<p>Welcome to the Gliese Library! This agora of knowledge functions as a <a href="https://jzhao.xyz/posts/networked-thought/">digital garden</a>, and will be continually updated. </p>
-									<script>
+								<script>
 function fit() {
     var iframes = document.querySelectorAll("iframe.gh-fit")
 
@@ -67,7 +68,7 @@ function fit() {
 
 addEventListener("load", requestAnimationFrame.bind(this, fit))
 									</script>
-									<iframe height="100%" class="gh-fit gh-fullwidth" src="https://docs.google.com/document/d/e/2PACX-1vTMAaMJF-ZyTKLXkGY-Drj4dHPtlpsEQr1HZWtoEg9ew0TuGaDJPudGkZq-OSqGGc7rPdQRuExPJt7F/pub?embedded=true"></iframe>
+									<iframe width="100%" class="gh-fit gh-fullwidth" src="https://docs.google.com/document/d/e/2PACX-1vTMAaMJF-ZyTKLXkGY-Drj4dHPtlpsEQr1HZWtoEg9ew0TuGaDJPudGkZq-OSqGGc7rPdQRuExPJt7F/pub?embedded=true"></iframe>
 
 								</section>
 
