--- a/mission.html
+++ b/mission.html
@@ -114,9 +114,8 @@
    		<div>
 		    	<span class="image fit"><img src="https://i.ibb.co/420YV00/image-2023-07-02-223852247.png" alt="" /></span>
                         <h3>Education</h3>
-                        <p>The Collecive views art education as absolutely essential for general youth development, for anyone, going into any field. Art is a lens to see through, and free education of it is the easiest way to get a prescription pair of glasses.</p>
-                </div>
-    		<div>  
+<p>The Collective believes that art education and the discourse around radicalism is essential to understanding events in the modern age. Art has impacted and continues to affect many spheres of life. This is why we strive for accessibility to knowledge and resources for young people as it promotes critical thinking, the questioning of authority and seeking change outside institutional structures. We aim to deconstruct the teacher-student dichotomy, as both can learn from each other. No one should have to ask permission for an education, and the Collective seeks to close the gap in learning about art.
+</p>                </div>    		<div>  
 			<span class="image fit"><img src="https://i.ibb.co/h20LFcx/image-2023-07-12-102746139.png" alt="" /></span>  
 			<h3>The future</h3>
                         <p>The Collective values future-thinking mindsets, envisioning future generations of art through a historical lens. There is no way to create a future without knowing the history of it. </p>
