--- a/library.html
+++ b/library.html
@@ -40,8 +40,7 @@
 									
 									<p>Welcome to the Gliese Library! This agora of knowledge functions as a <a href="https://jzhao.xyz/posts/networked-thought/">digital garden</a>, and will be continually updated. </p>
 							
-									<iframe width="100%" class="gh-fit gh-fullwidth" src="https://docs.google.com/document/d/e/2PACX-1vTMAaMJF-ZyTKLXkGY-Drj4dHPtlpsEQr1HZWtoEg9ew0TuGaDJPudGkZq-OSqGGc7rPdQRuExPJt7F/pub?embedded=true"></iframe>
-<div id="notion2embed" class="cleanslate"></div><script src="https://notion2embed.com/v1/oizbro4k"></script>
+									<iframe width="100%" height="5000px" src="https://docs.google.com/document/d/e/2PACX-1vTMAaMJF-ZyTKLXkGY-Drj4dHPtlpsEQr1HZWtoEg9ew0TuGaDJPudGkZq-OSqGGc7rPdQRuExPJt7F/pub?embedded=true"></iframe>
 								</section>
 
 						</div>
