--- a/library.html
+++ b/library.html
@@ -40,7 +40,23 @@
 									
 									<p>Welcome to the Gliese Library! This agora of knowledge functions as a <a href="https://jzhao.xyz/posts/networked-thought/">digital garden</a>, and will be continually updated. </p>
 							
-									<iframe width="100%" height="5000px" src="https://docs.google.com/document/d/e/2PACX-1vTMAaMJF-ZyTKLXkGY-Drj4dHPtlpsEQr1HZWtoEg9ew0TuGaDJPudGkZq-OSqGGc7rPdQRuExPJt7F/pub?embedded=true"></iframe>
+									<iframe width=100% id="flexible" frameborder=0 src="https://docs.google.com/document/d/e/2PACX-1vTMAaMJF-ZyTKLXkGY-Drj4dHPtlpsEQr1HZWtoEg9ew0TuGaDJPudGkZq-OSqGGc7rPdQRuExPJt7F/pub?embedded=true"></iframe>
+									<script src="iframeResizer.js"></script>
+<script>
+window.addEventListener(
+  'message',
+  (event) => {
+    if (event.data === 'gasFrame') {
+      window.gasFrame = event.source;
+      iFrameResize({
+        log: false,
+        checkOrigin: false
+      }, '#flexible');
+    }
+  },
+  false
+);
+</script>
 								</section>
 
 						</div>
@@ -115,6 +131,11 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+		<script src="iframeResizer.contentWindow.js"></script>
+<script>
+  top.postMessage('gasFrame', '*');
+</script>
 
 	</body>
     <footer class="footer-distributed">
