--- a/library.html
+++ b/library.html
@@ -40,7 +40,7 @@
 									
 									<p>Welcome to the Gliese Library! This agora of knowledge functions as a <a href="https://jzhao.xyz/posts/networked-thought/">digital garden</a>, and will be continually updated. </p>
 							
-									<iframe width=100% id="flexible" frameborder=0 src="https://docs.google.com/document/d/e/2PACX-1vTMAaMJF-ZyTKLXkGY-Drj4dHPtlpsEQr1HZWtoEg9ew0TuGaDJPudGkZq-OSqGGc7rPdQRuExPJt7F/pub?embedded=true"></iframe>
+									<div style="min-height: initial"><iframe width=100% id="flexible" frameborder=0 src="https://docs.google.com/document/d/e/2PACX-1vTMAaMJF-ZyTKLXkGY-Drj4dHPtlpsEQr1HZWtoEg9ew0TuGaDJPudGkZq-OSqGGc7rPdQRuExPJt7F/pub?embedded=true"></iframe> <div>
 									<script src="iframeResizer.js"></script>
 <script>
 window.addEventListener(
