--- a/library.html
+++ b/library.html
@@ -48,6 +48,7 @@
 										<iframe style="min-height: initial; min-height: 0; padding: 0%; margin: 0%;" width="100%" id=flexible frameborder=0 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSGZSmfZ4qyDzfYdGuSMIXTc_x0EpyeaWVHfyfisGHj7OqFceRnm8eCXWAP_l9yjrIU4mUOeZqxxsEz/pubhtml?widget=false&headers=false&chrome=false">
 											
 										</iframe> 
+									 <script type="text/javascript"> document.addEventListener('DOMContentLoaded', function(event) { var iframes = iFrameResize({ log: false, // Enable console logging inPageLinks: true, heightCalculationMethod: 'bodyScroll', checkOrigin: false }); }); </script> 
 									<script src="iframeResizer.js"></script>
 <script>
 window.addEventListener(
