--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/hubble_lightsaber_image2.jpg?itok=aAg3p3-Y" alt="hubble-sees-the-force-awakening-in-a-newborn-star" />
+										<img src="https://i.ibb.co/DtB2NVn/jpeg-PIA16022.jpg" alt="hubble-sees-the-force-awakening-in-a-newborn-star" />
 									</span>
 								</section>
 								<section>
